--- a/book.toml
+++ b/book.toml
@@ -3,11 +3,14 @@ authors = ["Danny Ben Shitrit"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Jobly"
+title = "Jobly Documentation"
 
 [build]
 build-dir = "docs"
 create-missing = false
+
+[output.html]
+default-theme = "ayu"
 
 [output.html.fold]
 enable = true
