ci: travis fix?

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ install:
 - gem install sla adsf
 
 before_script:
-- cd docs
-- "adsf > /dev/null 2>&1 &"
+- "(cd docs && adsf > /dev/null 2>&1 &)"
+- sleep 3
 
 script:
 - test/test.sh
