ci: improve adsf run command

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - gem install sla adsf
 
 before_script:
-- "(cd docs && adsf > /dev/null 2>&1 &)"
+- "adsf -rdocs > /dev/null 2>&1 &"
 - sleep 3
 
 script:
