--- a/retype.yml
+++ b/retype.yml
@@ -23,9 +23,11 @@ edit:
 links:
   - text: GitHub
     link: https://github.com/DannyBen/jobly
+    icon: mark-github
     target: blank
   - text: Issues
     link: https://github.com/DannyBen/jobly/issues
+    icon: issue-opened
     target: blank
 
 integrations:
