updates for retype 3

--- a/op.conf
+++ b/op.conf
@@ -5,7 +5,7 @@ build: rm -rfv docs/* ; retype build
 #? clear target dir and rebuild site
 
 # watch: filewatcher src "op build"
-watch: retype watch
+watch: retype start -n
 #? watch src folder and rebuild on change
 
 # dev: foreman start
